<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fabrik_ik</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marija@todo.todo">marija</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>fmt</depend>
  <depend>generate_parameter_library</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>range-v3</depend>
  <depend>rclcpp</depend>
  <depend>rsl</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tl_expected</depend>
  

   <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/fabrik_ik_kinematics_description.xml"/>
  </export>
</package>
